# webify-bash

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  app.py  cli.py  cli.sh  commands.json  config.py  container-cli.sh  defaults.env  demo.sh  docker-cli.sh  local-server.sh  pyproject.toml  requirements.txt  run-server.py  test-api.sh  test_app.py
.github/workflows/: docker.yml
docs/: index.html
