[project]
name = "webify-bash"
version = "0.1.0"
description = "HTTP API for executing allowlisted shell commands"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "pre-commit",
    "ruff",
]

[tool.setuptools]
py-modules = ["app"]

[tool.pytest.ini_options]
testpaths = ["test_app.py"]
