[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webify-bash"
version = "0.1.0"
description = "HTTP API for executing allowlisted shell commands"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109,<1",
    "uvicorn>=0.27,<1",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "httpx>=0.27,<1",
    "pre-commit>=3.6,<4",
    "ruff>=0.2,<1",
]

[tool.setuptools]
py-modules = ["app", "config"]

[tool.pytest.ini_options]
testpaths = ["test_app.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
